--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   width: 5.5rem;
   height: 5.5rem;
 }
+.gif-img {
+  width: 50%;
+  height: 50%;
+}
 * {
   font-family: "Raleway", sans-serif;
   padding: 0;
