--- a/src/components/scanner/Scanner.css
+++ b/src/components/scanner/Scanner.css
@@ -8,6 +8,10 @@
   overflow: hidden;
   background-color: #f0f0f0;
 }
+.product_img {
+  width: 100%;
+  height: 100%;
+}
 
 .scanner-video-container {
   position: relative;
