--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,12 @@
     opacity: 1;
   }
 } */
-
-s #email-input::placeholder,
+.cart_img {
+  width: 6.6rem;
+  height: 5.5rem;
+  border-radius: 4px;
+}
+#email-input::placeholder,
 #last-name::placeholder,
 #first-name::placeholder,
 #address-input::placeholder,
@@ -78,6 +82,14 @@ s #email-input::placeholder,
 @media screen and (min-width: 320px) and (max-width: 820px) {
   .max_width {
     min-width: 85%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cart_img {
+    width: 5.2rem;
+    height: 5.5rem;
+    border-radius: 4px;
   }
 }
 
