--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
   width: 50%;
   height: 50%;
 }
+
 * {
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway", "Montserrat";
   padding: 0;
   margin: 0;
   box-sizing: border-box;
