--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;1,100&family=Raleway:wght@200&display=swap");
-
 .checkLogo {
   width: 5.5rem;
   height: 5.5rem;
@@ -72,9 +70,10 @@
 #email-input,
 #first-name,
 #address-input,
-#phone-number #password-input {
+#phone-number,
+#password-input {
   font-family: raleWay;
-  font-weight: bold;
+  font-weight: 600;
 }
 /* .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
   border:2px solid #C57600 !important;
