--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,24 +1,24 @@
 .active-link {
-font-weight: bolder;
-filter: invert(20%)sepia(89%)saturate(4868%)hue-rotate(343deg)brightness(80%)contrast(121%);
+  font-weight: bolder;
+  filter: invert(20%) sepia(89%) saturate(4868%) hue-rotate(343deg)
+    brightness(80%) contrast(121%);
+  color: #dc2a12;
 }
 
-
-
-.gpt3__navbar  {
-font-size: 10px;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-gap: 8px;
+.gpt3__navbar {
+  font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .gpt3__navbar img {
-filter: invert(44%)sepia(0%)saturate(0%)hue-rotate(142deg)brightness(101%)contrast(92%);
+  filter: invert(44%) sepia(0%) saturate(0%) hue-rotate(142deg) brightness(101%)
+    contrast(92%);
 }
 
 #firstnav {
-padding-top: 4px;
+  padding-top: 4px;
 }
-
