--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,6 +3,7 @@
   filter: invert(20%) sepia(89%) saturate(4868%) hue-rotate(343deg)
     brightness(80%) contrast(121%);
   color: #dc2a12;
+  -webkit-text-fill-color: #dc2a12;
 }
 
 .gpt3__navbar {
