--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  --cart-bg-color:#F2F2F2;
+  --primary-red:#dc0019 ;
 }
 .max_width {
   display: flex;
