--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   box-sizing: border-box;
   --cart-bg-color:#F2F2F2;
   --primary-red:#dc0019 ;
+  --cart-deep-red:#EB001B;
 }
 .max_width {
   display: flex;
