fix menu box ,button lists

--- a/src/components/backArrow/BackArrow.css
+++ b/src/components/backArrow/BackArrow.css
@@ -13,6 +13,6 @@
     top: 78px;
     border: 1px solid #CDCDCD;
     border-radius: 8px;
-    margin-bottom: 2rem;
+    margin-bottom: .8rem;
     }
     
