--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   --cart-bg-color:#F2F2F2;
   --primary-red:#dc0019 ;
   --cart-deep-red:#EB001B;
+  --grey-cart-btn:#E8E5E5;
 }
 .max_width {
   display: flex;
